app/assets/stylesheets/map.css
#map {
  height: calc(100vh - 63px);
  width: calc(100vw - 4px);
}

/* Customizing find me button */
.custom-map-control-button {
  margin-right: 10px;
  height: 48px;
  cursor: pointer;
  border: none;
  background-color: transparent;
}

#custom-zoom-controller-container {
  margin-right: 10px;
}

#location-button {
  margin-bottom: 30px;
}

/* Customizing find me button */

